--- a/APBD/app/src/main/res/drawable/shape.xml
+++ b/APBD/app/src/main/res/drawable/shape.xml
@@ -9,7 +9,7 @@
             android:width="120px"
             android:color="#FFFFFF" />
 
-        <corners android:radius="dp" />
+        <corners android:radius="2dp" />
 
     </shape>
 
