--- a/APBD/app/src/main/res/layout/activity_main.xml
+++ b/APBD/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_marginBottom="636dp"
         android:gravity="center_horizontal|top"
         android:text="@string/planning"
-        android:textAppearance="@style/planning" />
+        />
     <!-- Rectangle 9 -->
 
     <!-- icon -->
@@ -177,7 +177,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="357dp"
         android:layout_marginBottom="24dp"
-        app:srcCompat="@drawable/Dashboard" />
+        app:srcCompat="@drawable/dashboard" />
     <!-- Home -->
     <TextView
         android:id="@+id/home"
