--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#06D6A0">
+    android:background="#06D6A0"
+    tools:ignore="MissingDefaultResource">
 
 
     <TextView
@@ -453,7 +454,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="357dp"
         android:layout_marginBottom="24dp"
-        app:srcCompat="@drawable/Dashboard" />
+        app:srcCompat="@drawable/dashboard" />
     <!-- Home -->
     <TextView
         android:id="@+id/home"
