--- a/APBD/app/src/main/res/layout/homenewtransaction.xml
+++ b/APBD/app/src/main/res/layout/homenewtransaction.xml
@@ -21,8 +21,7 @@
         android:layout_marginTop="38dp"
         android:layout_marginBottom="636dp"
         android:gravity="center_horizontal|top"
-        android:text="@string/planning"
-        android:textAppearance="@style/planning" />
+        android:text="@string/planning" />
     <!-- Rectangle 9 -->
 
     <!-- icon -->
@@ -177,7 +176,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="357dp"
         android:layout_marginBottom="24dp"
-        app:srcCompat="@drawable/Dashboard" />
+        app:srcCompat="@drawable/dashboard" />
     <!-- Home -->
     <TextView
         android:id="@+id/home"
