--- a/APBD/app/src/main/res/layout/planning.xml
+++ b/APBD/app/src/main/res/layout/planning.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/planName"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06D6A0"
@@ -21,24 +22,13 @@
         android:layout_marginTop="38dp"
         android:layout_marginBottom="636dp"
         android:gravity="center_horizontal|top"
-        android:text="@string/planning" />
+        android:text="@string/planning"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp" />
     <!-- Rectangle 9 -->
 
     <!-- icon -->
     <!--- bottom bar-->
-
-    <TextView
-        android:id="@+id/icon"
-        android:layout_width="108dp"
-        android:layout_height="48dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="155dp"
-        android:layout_marginTop="186dp"
-        android:gravity="center_horizontal|top"
-        android:text="@string/icon"
-        android:textAppearance="@style/icon2"
-        android:elevation="5dp"/>
 
     <!-- Rectangle 9 -->
 
@@ -62,8 +52,6 @@
         android:layout_marginLeft="0dp"
         android:layout_marginBottom="0dp"
         android:background="#26547C" />
-
-
 
 
     <ImageView
@@ -189,6 +177,16 @@
         android:gravity="center_horizontal|top"
         android:text="@string/home"
         android:textAppearance="@style/home" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="507dp"
+        app:srcCompat="@drawable/icon" />
 
 </RelativeLayout>
 
