--- a/APBD/app/src/main/res/layout/login_page.xml
+++ b/APBD/app/src/main/res/layout/login_page.xml
@@ -5,7 +5,8 @@
     style="under"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#06D6A0">
+    android:background="#06D6A0"
+    tools:context=".LoginPage">
 
     <Button
         android:id="@+id/buttonRegister2"
@@ -60,6 +61,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonRegister2"
         app:rippleColor="@color/white"
+        android:onClick="goToHome"
         tools:cornerRadius="12" />
 
     <TextView
